--- a/community/templates/cursos.html
+++ b/community/templates/cursos.html
@@ -3,11 +3,11 @@
 
 {% block content %}
     <div class="container-sm">
-        <div class="row row-cols-1 row-cols-md-2 g-4 p-5">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-4 p-5">
             {% for c in cursos %}
                 <div class="col-md-4 col-lg-4 d-flex align-items-stretch" >
                     <div class="card" style="width: 18rem;">
-                        <img src="{{c.image}}" class="card-img" alt="{{c.name}}">
+                        <img src="{{c.image}}" class="card-img" style="width: 100%;height: 12em;" alt="{{c.name}}">
                         <div class="card-body">
                             <h5 class="card-title">{{c.name|slice:":30"}}</h5>
                             <p class="card-text">{{ c.description|slice:":40" }}.</p>
