--- a/community/templates/home.html
+++ b/community/templates/home.html
@@ -1,14 +1,12 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %} hola amigos de | Community {% endblock %}
+{% block title %} E-Programación {% endblock %}
 
 {% block link %}
-        <link rel="stylesheet" href=" {% static 'css/button.css' %} ">
+    <link rel="stylesheet" href=" {% static 'css/button.css' %} ">
 {% endblock %}
 
-
 {% block content %}
-
 <div class="container col mb-4">
     {% include "slider.html" %}
     <div class="row justify-content-center align-items-center gap-3">
