--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,43 +1,10 @@
 <footer class="bg-light p-0" style="">
-    <!-- Grid container -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        <div class="container p-4 pb-0">
-        <!-- Section: Social media -->
-            <div class="row justify-content-center mb-4">
-                <div class="col p-0">
-
-                    <!-- Facebook -->
-                    <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998;" href="#!" role="button">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <!-- Twitter -->
-                    <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee;" href="#!" role="button">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <!-- Google -->
-                    <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39;" href="#!" role="button">
-                        <i class="fab fa-google"></i>
-                    </a>
-                    <!-- Instagram -->
-                    <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac;" href="#!" role="button">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <!-- Linkedin -->
-                    <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca;" href="#!" role="button">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
-                    <!-- Github -->
-                    <a class="btn btn-primary btn-floating m-1" style="background-color: #333333;" href="#!" role="button">
-                        <i class="fab fa-github"></i>
-                    </a>
-                </div>
-            </div>
-        <!-- Section: Social media -->
-        </div>
-    <!-- Grid container -->
-
     <!-- Copyright -->
-        <p class="fw-bold">&copy;2022 - 2022</p>
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        <a class="btn btn-primary btn-floating m-1" target="_blank" href="https://t.me/EnlacesProgramadores" role="button">
+            <i class="fab fa-telegram"></i>
+        </a>
+        <a class="text-dark" target="_blank" href="https://t.me/EnlacesProgramadores">Telegram © 2022</a>
     </div>
     <!-- Copyright -->
 </footer>
