FIX: description, challenges

--- a/community/templates/retos.html
+++ b/community/templates/retos.html
@@ -12,7 +12,7 @@
                         <div class="card-body">
                             {% if c.name == 'Practices-Coders' %}
                                 <h5 class="card-title">{{c.name|slice:":30"}}</h5>
-                                <p class="card-text">Tendras acceso a todos los algoritmos en diferentes lenaguajes de programación. Solicitar permiso a: <a href="https://wa.me/+51993620749" target="_blank">MarckJoe</a></p>
+                                <p class="card-text">Tendras acceso a todos los algoritmos en diferentes lenguajes de programación. Solicitar permiso a: <a href="https://wa.me/+51993620749" target="_blank">MarckJoe</a></p>
                             {% else %}
                                 <h5 class="card-title">{{c.name|slice:":30"}}</h5>
                                 <p class="card-text">{{ c.description|slice:":40" }}.</p>
