FEAD: Creation templates tiktok

--- a/community/templates/home.html
+++ b/community/templates/home.html
@@ -43,6 +43,14 @@
             </a>
         </div>
         <div class="col-10 col-sm-5 col-md-5 col-lg-3 p-0">
+            <a class="text-decoration-none" href="{% url 'tiktok' %}">
+                <div color="#3F51B5" class="fs-5 sc-13vwexf-0 jGmZdx">
+                    <i class="bi bi-camera-video me-2"></i>
+                    Tik-Tok
+                </div>
+            </a>
+        </div>
+        <div class="col-10 col-sm-5 col-md-5 col-lg-3 p-0">
             <a class="text-decoration-none" href="{% url 'games' %}">
                 <div color="#FFD54F" class="fs-5 sc-13vwexf-0 bMFJxi">
                     <i class="bi bi-controller me-2"></i>
@@ -61,7 +69,7 @@
         <div class="col-10 col-sm-5 col-md-5 col-lg-3 p-0">
             <a class="text-decoration-none" href="{% url 'editor' %}">
                 <div color="#9E9E9E" class="fs-5 sc-13vwexf-0 hLjWgB">
-                    <i class="bi bi-camera-video me-2"></i>
+                    <i class="bi bi-laptop me-2"></i>
                     IDE-Editor
                 </div>
             </a>
