--- a/community/templates/linkgroups.html
+++ b/community/templates/linkgroups.html
@@ -7,6 +7,7 @@
             {% for c in context %}
                 <div class="col-md-3" >
                     <div class="card" >
+                        <img src="{{c.image}}" style="width: 100%;height: 12em;" class="card-img" alt="{{c.name}}">
                         <div class="card-body">
                             <h5 class="card-title">{{c.name}}</h5>
                             <div class="card card-body justify-content-center border-0">
