--- a/community/templates/linkgroups.html
+++ b/community/templates/linkgroups.html
@@ -9,7 +9,7 @@
                     <div class="card" >
                         <img src="{{c.image}}" style="width: 100%;height: 12em;" class="card-img" alt="{{c.name}}">
                         <div class="card-body">
-                            <h5 class="card-title">{{c.name}}</h5>
+                            <h5 class="card-title" style="height: 3em;">{{c.name}}</h5>
                             <div class="card card-body justify-content-center border-0">
                                 <a class="btn btn-primary" type="button" href="{{c.url}}" target="_blank"> Ir al Grupo</a>
                             </div>
