--- a/community/templates/home.html
+++ b/community/templates/home.html
@@ -98,6 +98,14 @@
                 </div>
             </a>
         </div>
+        <div class="col-10 col-sm-5 col-md-5 col-lg-3 p-0">
+            <a class="text-decoration-none" href="{% url 'youtube' %}">
+                <div color="#00CC88" class="fs-5 sc-13vwexf-0 fVpbFI">
+                    <i class="bi bi-camera-video me-2"></i>
+                    Youtube
+                </div>
+            </a>
+        </div>
     </div>
 </div>
 
