--- a/community/templates/home.html
+++ b/community/templates/home.html
@@ -7,7 +7,9 @@
 {% endblock %}
 
 {% block content %}
-<div class="container col mb-4">
+    {% block container %}
+    <div class="container col mb-4">
+    {% endblock %}
     {% include "slider.html" %}
     <div class="row justify-content-center align-items-center gap-3">
         <div class="col-10 col-sm-5 col-md-5 col-lg-3 p-0">
