--- a/community/templates/youtube.html
+++ b/community/templates/youtube.html
@@ -1,22 +1,25 @@
 {% extends "base.html" %}
 {% load static %}
 
+
+{% block container %}
+<div class="container">
+{% endblock %}
 {% block content %}
-    <div class="container-sm">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-4 p-5">
-            {% for c in youtube %}
-                <div class="col-md-3 col-lg-3 d-flex align-items-stretch" >
-                    <div class="card" >
-                        <img src="{{c.image}}" style="width: 100%;height: 15em;" class="card-img" alt="{{c.name}}">
-                        <div class="card-body">
-                            <h5 class="card-title" style="height: 3em;">{{c.name}}</h5>
-                            <div class="card card-body justify-content-center border-0">
-                                <a class="btn btn-primary" type="button" href="{{c.url}}" target="_blank"> Ir a Canal</a>
-                            </div>
+    <div class="row gy-3 my-4">
+        {% for c in youtube %}
+            <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="card" >
+                    <img src="{{c.image}}" style="width: 100%;height: 17em; object-fit: cover"  class="card-img-top" alt="{{c.image}}">
+                    <div class="card-body">
+                        <h5 class="card-title">{{c.name|slice:":24"}}</h5>
+                        <p class="card-text" style="height: 4em" >{{ c.description|slice:":34" }}.</p>
+                        <div class="card card-body">
+                            <a class="btn btn-primary" type="button" href="{{c.url}}" target="_blank"> Ir al Grupo</a>
                         </div>
                     </div>
                 </div>
-            {%endfor%}
-        </div>
+            </div>
+        {%endfor%}
     </div>
 {% endblock %}
